--- a/a2/style.css
+++ b/a2/style.css
@@ -1,1 +1,25 @@
 /* Insert your styles here */
+.container{
+    font-family: 'Montserrat', sans-serif;
+}
+#logo{
+
+    height: 150px;
+    width: 150px;
+}
+.jumbotron{
+    /* Creative Commons image sourced from https://www.pexels.com/photo/architecture-building-business-cinema-436413/ and used for educational purposes only */
+    background-image: url(media/jumbotron-background.jpg);
+    background-size: cover;
+    background-position: 0 50%;
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
+    text-align: center;
+}
+#company-name{
+    font-size: 60px;
+    color: white;
+    margin-bottom: 0px;
+}
+.nav-link:hover{
+    color: white;
+}
