--- a/a2/style.css
+++ b/a2/style.css
@@ -39,7 +39,7 @@ body{
     background-attachment: fixed;
     background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 2500px;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
 
     text-align: center;
