--- a/a3/style.css
+++ b/a3/style.css
@@ -428,6 +428,16 @@ body {
     color: cornsilk;
     text-decoration: underline;
 }
+.require{
+    color: red;
+}
+#seat-req {
+    color: red;
+    padding-left: 10px;
+}
+#cust-email:valid {
+    border: 2px solid #008040;
+}
 #order {
     position: absolute;
     right: 0px;
